Converted POM to use S3 for distribution management.

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <artifactId>defaults</artifactId>
     <packaging>pom</packaging>
     <version>1.0.5-SNAPSHOT</version>
-    <name>defaults</name>
 
     <properties>
         <!-- Library versions - should be 'lib.version.{artifactId}' -->
@@ -23,12 +22,21 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
+    <prerequisites>
+        <maven>3.2.1</maven>
+    </prerequisites>
+
     <distributionManagement>
         <repository>
-            <id>johnstok</id>
-            <name>johnstok</name>
-            <url>${repo.johnstok}</url>
+            <id>johnstok-release</id>
+            <name>Johnstok Release Repository</name>
+            <url>${repo.johnstok.release}</url>
         </repository>
+        <snapshotRepository>
+            <id>johnstok-snapshot</id>
+            <name>Johnstok Snapshot Repository</name>
+            <url>${repo.johnstok.snapshot}</url>
+        </snapshotRepository>
     </distributionManagement>
 
     <repositories>
@@ -227,9 +235,9 @@
 
         <extensions>
             <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-ssh</artifactId>
-                <version>2.2</version>
+                <groupId>org.springframework.build</groupId>
+                <artifactId>aws-maven</artifactId>
+                <version>5.0.0.RELEASE</version>
             </extension>
         </extensions>
 
