--- a/pom.xml
+++ b/pom.xml
@@ -279,6 +279,25 @@
 		        <artifactId>versions-maven-plugin</artifactId>
 		        <version>${plugin.version.versions}</version>
 		      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>1.4.1</version>
+        <executions>
+          <execution>
+            <id>enforce</id>
+            <configuration>
+              <rules>
+                <dependencyConvergence/>
+                <requirePluginVersions/>
+              </rules>
+            </configuration>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
         </plugins>
 
         <extensions>
