Added default SCM entry.

--- a/pom.xml
+++ b/pom.xml
@@ -314,5 +314,9 @@
         </extensions>
 
     </build>
+    
+    <scm>
+    <connection>scm:git:file://${basedir}</connection>
+</scm>
 
 </project>
