--- a/pom.xml
+++ b/pom.xml
@@ -292,7 +292,16 @@
                 <configuration>
                     <doCheck>true</doCheck>
                     <doUpdate>false</doUpdate>
+                    <revisionOnScmFailure>SNAPSHOT</revisionOnScmFailure>
                 </configuration>
+    <!-- executions>
+        <execution>
+            <phase>validate</phase>
+            <goals>
+                <goal>create</goal>
+            </goals>
+        </execution>
+    </executions-->
             </plugin>
 			<plugin>
 		        <groupId>org.codehaus.mojo</groupId>
